# sanaverkko

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  LTM_USAGE.md  Makefile  README.md  RELEASE_NOTES.md  SanaVerkkoParams.tex  SanaVerkkoParams2.tex  SanaVerkko_Algorithms_and_Background.tex  SanaVerkko_Algorithms_and_Background2.tex  chicken_qabalah.txt  cmake_install.cmake  einoleino.txt  input.txt  installation_mode_implementation.tex  liber777.txt  output.txt  requirements.txt  sanaVerkkoCore.py  sanasyna.cc  sanasyna.h  sanasyna.i  sanasyna.py  sanasyna_wrap.c  setup.ps1  setup_venv.ps1  setup_venv.sh  setup_venv.zsh  sv_ltm.py  text.txt
piper_voices/: nogeneratedsentences.json
presets/: 01_monastic_order.json  01_very_ordered.json  02_ordered_balanced.json  02_ordered_lattice.json  03_balanced_dynamic.json  03_balanced_motion.json  04_curious_explorer.json  04_exploratory.json  05_chaotic.json  05_controlled_chaos.json  06_crystal_ordered_polyphony.json  06_harmonic_weave.json  07_resonant_drift.json  07_tight_balanced_triad.json  08_dynamic_glide_quartet.json  08_mutation_storm.json  09_fractal_rupture.json  09_noisy_fractal_swarm.json  10_abyssal_glitch.json  10_resonant_pulse_duo.json  11_stable_wordflow_synthesis.json  12_energetic_wordflow_synthesis.json  13_ultra_safe_live.json  14_ultra_safe_live_tts.json  15_jakes_special_patch.json  clipnoises.json  jake_special2.json  jake_special3.json  jake_special4.json  jake_special5.json  jake_special6.json  testing1.json
